Inicia alteração de SQLC para Gorm
