# cmd/main.go
@@ -1,74 +1,55 @@
 package main
 
 import (
-	"context"
-	"database/sql"
 	"fmt"
-	"log"
+	"net/http"
 
 	"github.com/felipefabricio/wonder-food/configs"
+	_ "github.com/felipefabricio/wonder-food/docs"
 	"github.com/felipefabricio/wonder-food/internal/infra/database"
-	"github.com/felipefabricio/wonder-food/internal/webapi/router"
+	"github.com/felipefabricio/wonder-food/internal/usecase"
+	"github.com/felipefabricio/wonder-food/internal/webapi/handler"
+	"github.com/go-chi/chi"
 	_ "github.com/go-sql-driver/mysql"
-	"github.com/google/uuid"
+	httpSwagger "github.com/swaggo/http-swagger"
+	"gorm.io/driver/mysql"
+	"gorm.io/gorm"
 )
 
 // @title           WonderFood API
 // @version         1.0
 // @description     API para o sistema de pedidos da WonderFood
 // @termsOfService  http://swagger.io/terms/
-
 // @contact.name   Felipe Fabricio
 // @contact.url    https://www.linkedin.com/in/felipefabricio/
 // @contact.email  ff.oliveira32@gmail.com
-
 // @host      localhost:8000
 // @BasePath  /
 func main() {
-	ctx := context.Background()
 	configs, err := configs.LoadConfig("../configs")
 	if err != nil {
 		panic(err)
 	}
 
-	dbConnection, err := sql.Open(configs.DBDriver, fmt.Sprintf("%s:%s@tcp(%s:%s)/%s", configs.DBUser, configs.DBPassword, configs.DBHost, configs.DBPort, configs.DBName))
+	connectionString := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s", configs.DBUser, configs.DBPassword, configs.DBHost, configs.DBPort, configs.DBName)
+	db, err := gorm.Open(mysql.Open(connectionString), &gorm.Config{})
 	if err != nil {
-		log.Fatal(err)
+		panic(err)
 	}
-	defer dbConnection.Close()
+	fmt.Println("Conectado ao banco de dados na porta 3306!")
 
-	err = dbConnection.Ping()
-	if err != nil {
-		log.Fatal(err)
-	}
+	produtoRepository := database.NewProdutoDb(db)
+	produtoUseCases := usecase.NewProdutoUseCases(produtoRepository)
+	produtoHandler := handler.NewProdutoHandler(produtoUseCases)
 
-	fmt.Println("Conexão com a Base de Dados estabelecida com Sucesso!")
-
-	router.HandleRequests()
-
-	queries := database.New(dbConnection)
-
-	result, err := queries.ObterTodosProdutos(ctx)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	fmt.Println(result)
-
-	err = queries.InserirCliente(ctx, database.InserirClienteParams{
-		ID:    uuid.New().String(),
-		Nome:  sql.NullString{String: "Bebel Tuco", Valid: true},
-		Email: sql.NullString{String: "felipe@uol.com", Valid: true},
-		Cpf:   sql.NullString{String: "34566678900", Valid: true},
+	r := chi.NewRouter()
+	r.Route("/produtos", func(r chi.Router) {
+		r.Get("/", produtoHandler.ObterTodosProdutos)
+		r.Post("/", produtoHandler.InserirProduto)
+		r.Get("/{categoria:int}", produtoHandler.ObterPorCategoria)
 	})
 
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	cliente, err := queries.ObterClientePorCpf(ctx, sql.NullString{String: "34566678900", Valid: true})
-	if err != nil {
-		log.Fatal(err)
-	}
-	fmt.Println(cliente)
+	r.Get("/docs/*", httpSwagger.Handler(httpSwagger.URL("http://localhost:8000/docs/doc.json")))
+	fmt.Println("Servidor iniciado na porta 8000!")
+	http.ListenAndServe(":8000", r)
 }
