# internal/infra/database/models.go
@@ -1,41 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.23.0
-
-package database
-
-import (
-	"database/sql"
-
-	"github.com/shopspring/decimal"
-)
-
-type Cliente struct {
-	ID    string
-	Nome  sql.NullString
-	Cpf   sql.NullString
-	Email sql.NullString
-}
-
-type Pedido struct {
-	ID           string
-	ClienteID    string
-	Valor        decimal.Decimal
-	Status       int32
-	Data         sql.NullTime
-	Numeropedido int32
-}
-
-type Produto struct {
-	ID        string
-	Nome      string
-	Descricao sql.NullString
-	Categoria int32
-	Valor     decimal.Decimal
-}
-
-type ProdutosPedido struct {
-	PedidoID   string
-	ProdutoID  string
-	Quantidade int32
-}
